@@ -2303,6 +2303,14 @@
       <text>Spell Limit</text>
     </string>
     <string>
+      <key>Message_UnboundSpiritLimit</key>
+      <text>You cannot have more than one unbound Spirit with services at a time.</text>
+    </string>
+    <string>
+      <key>MessageTitle_UnboundSpiritLimit</key>
+      <text>Unbound Spirit Limit</text>
+    </string>
+    <string>
       <key>Message_BoundSpiritLimit</key>
       <text>Your number of bound Spirits cannot exceed your CHA score.</text>
     </string>
@@ -2312,7 +2320,7 @@
     </string>
     <string>
       <key>Message_UnregisteredSpriteLimit</key>
-      <text>You cannot have more than one unregistered Sprite at a time.</text>
+      <text>You cannot have more than one unregistered Sprite with services at a time.</text>
     </string>
     <string>
       <key>MessageTitle_UnregisteredSpriteLimit</key>
